--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       <title>Flight booking travel</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
-      <meta name="author" content="">
+      <meta name="author" content=" subhadip dey">
+
       <!-- bootstrap css -->
       <link rel="stylesheet" href="css/bootstrap.min.css">
       <!-- style css -->
